# OpenBachelorS

./: Makefile  pyproject.toml  start-prod.cmd
.github/workflows/: update.yml
conf/: config.json  version.json  version_en.json
data/: crisisV2_tmpl.json  gacha_data.json  gacha_data_en.json  tmpl.json
data/crisisV2/: crisis_v2_season_4_1.json
link/: game.txt
res_en/excel/: campaign_table.json  chapter_table.json  char_meta_table.json  char_patch_table.json  charm_table.json  checkin_table.json  climb_tower_table.json  clue_data.json  crisis_table.json  crisis_v2_table.json  display_meta_table.json  enemy_handbook_table.json  gacha_table.json  gamedata_const.json  handbook_team_table.json  hotupdate_meta_table.json  init_text.json  item_table.json  main_text.json  medal_table.json  meta_ui_table.json  mission_table.json  open_server_table.json  replicate_table.json  sandbox_perm_table.json  shop_client_table.json  skin_table.json  story_review_meta_table.json  story_review_table.json  story_table.json  tip_table.json  token_table.json  uniequip_table.json  zone_table.json
src/openbachelors/: __init__.py  app.py
src/openbachelors/bp/: bp_account.py  bp_api.py  bp_assetbundle.py  bp_businessCard.py  bp_charRotation.py  bp_config.py  bp_gacha.py  bp_quest.py  bp_rlv2.py  bp_social.py  bp_tower.py  bp_u8.py  bp_user.py  legacy_bp.py  misc_bp.py
src/openbachelors/const/: filepath.py
src/openbachelors/tool/: asset_downloader.py  console.py  link_updater.py  version_updater.py
test/: conftest.py  test_db.py  test_download_file.py  test_player_data.py
(+8 files in other folders)
