[project]
name = "openbachelors"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "pathvalidate (>=3.3.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "prompt-toolkit (>=3.0.51,<4.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "orjson (>=3.11.2,<4.0.0)",
]

[tool.poetry]
packages = [{ include = "openbachelors", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pytest = "^8.4.1"
poethepoet = "^0.36.0"

[tool.poe.tasks]
test = "pytest"
dev = "uvicorn --port 8443 --reload openbachelors.app:app"
prod = "hypercorn -b 127.0.0.1:8443 -w 16 openbachelors.app:app"


[tool.poetry.scripts]
asset-downloader = "openbachelors.tool.asset_downloader:main"
console = "openbachelors.tool.console:cli"
link-updater = "openbachelors.tool.link_updater:main"
res-locker = "openbachelors.tool.res_locker:main"
version-updater = "openbachelors.tool.version_updater:main"
